# mcp_agent_demo

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
analytics_service/: config.py  main.py
analytics_service/auth/: __init__.py  jwt_generator.py  jwt_utils.py  test_users.py
analytics_service/middleware/: logging.py
analytics_service/models/: load_test.py  reports.py  scenarios.py
analytics_service/routers/: __init__.py  control.py
analytics_service/services/: concurrent_load_test_manager.py  ip_generator.py  load_generator.py  load_test_manager.py
api/: README.md  currency_demo.db  pyproject.toml  test_currency.db
api/currency_app/: __init__.py  config.py  database.py  main.py
api/currency_app/middleware/: __init__.py  logging.py  metrics.py
api/currency_app/models/: __init__.py  conversion.py  database.py
api/currency_app/routers/: __init__.py  conversion.py  health.py  home.py  rates.py
api/currency_app/services/: __init__.py  currency_service.py  rates_history_service.py
api/currency_app/templates/: home.html
api/dashboard/: __init__.py  app.py
api/load_tester/: config.py  main.py
api/load_tester/middleware/: __init__.py  metrics.py
api/load_tester/models/: __init__.py  load_test.py  reports.py  scenarios.py
api/load_tester/routers/: control.py
api/load_tester/services/: __init__.py  load_generator.py  load_test_manager.py
api/tests/: test_api.py  test_database.py  test_metrics_endpoint.py  test_metrics_integration.py  test_metrics_middleware.py  test_metrics_utilities.py  test_models.py  test_rates_history_service.py
api/tests/load_tester/: __init__.py  test_currency_patterns.py  test_load_generator.py  test_load_ramping.py  test_load_test_manager.py  test_load_tester_api.py  test_ramping_api.py  test_reports.py  test_scenario_configs.py  test_scenario_metadata.py  test_scenario_utils.py  test_scenario_validation.py  test_scenarios_api.py
api_specs/: openapi.json
common/: logging_config.py
currency_app/: config.py  database.py  logging_config.py  main.py  tracing_config.py
currency_app/auth/: __init__.py  jwt_auth.py
currency_app/middleware/: auth.py  logging.py
currency_app/models/: conversion.py  database.py
currency_app/routers/: conversion.py  debug.py
currency_app/services/: currency_service.py  rates_history_service.py
currency_app/templates/: home.html
dashboard/: __init__.py  app.py  utils.py
dashboard/page_modules/: attack_simulation.py  converter.py  historical.py  load_testing.py  rates.py  test_results.py
docker/: prometheus.yml
docker/grafana/provisioning/alerting/: contact-points.yml  currency-api-alerts.yml  load-tester-alerts.yml
docker/grafana/provisioning/contact-points/: pagerduty.yml
docker/grafana/provisioning/dashboards/: currency-api-dashboard.json  load-testing-dashboard.json  logs-dashboard.json
docker/grafana/provisioning/datasources/: datasource.yml
docker/loki/: local-config.yaml
docker/promtail/: config.yml
docs/: PAGERDUTY_SETUP.md
load_tester/: __init__.py  config.py  logging_config.py  main.py
load_tester/auth/: jwt_generator.py  jwt_utils.py
load_tester/middleware/: logging.py
load_tester/models/: load_test.py  scenarios.py
load_tester/routers/: control.py
load_tester/services/: concurrent_load_test_manager.py  currency_patterns.py  load_generator.py  load_test_manager.py
scripts/: clean_and_regenerate.py  generate_demo_data.py  generate_jwt_tokens.py  generate_openapi_spec.py  test_pagerduty.py  test_rps_accuracy.py
tests/: __init__.py
tests/analytics_service/: test_concurrent_api_basic.py  test_concurrent_manager_basic.py  test_currency_patterns.py  test_high_rps_scenarios.py  test_ip_generator.py  test_ip_spoofing_config.py  test_load_generator.py  test_load_ramping.py  test_load_test_manager.py  test_load_test_models.py  test_load_tester_api.py  test_ramping_api.py  test_reports.py  test_scenario_configs.py  test_scenario_metadata.py  test_scenario_utils.py  test_scenario_validation.py  test_scenarios_api.py
tests/currency_app/: __init__.py  test_api.py  test_currency_service.py  test_jwt_auth.py  test_metrics_endpoint.py  test_metrics_integration.py  test_models.py  test_rates_history_service.py
tests/load_tester/: test_concurrent_api_basic.py  test_concurrent_manager_basic.py  test_currency_patterns.py  test_high_rps_scenarios.py  test_load_generator.py  test_load_ramping.py  test_load_test_manager.py  test_load_test_models.py  test_load_tester_api.py  test_ramping_api.py  test_reports.py  test_scenarios_api.py
